feat: initial support for ReifierStd